Fix intro-lead-in margin on smaller screens.

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -13,7 +13,7 @@ header.masthead {
     .intro-lead-in {
       font-size: 27px;
       line-height: 10px;
-      margin-bottom: 25px;
+      margin-bottom: 80px;
       color: #000;
       text-align: left;
       p {
